lego/operator/config/prod/kv-sni-proxy-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: bex-kv-sni-proxy-public
  namespace: bex-system
  annotations:
    load-balancer.hetzner.cloud/name: bex-traefik
    load-balancer.hetzner.cloud/location: fsn1
    load-balancer.hetzner.cloud/use-private-ip: "true"
    load-balancer.hetzner.cloud/uses-proxyprotocol: "false"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.bex.co/component: kv-sni-proxy
  ports:
    - name: valkey
      port: 6379
      targetPort: 6379
      protocol: TCP
