lego/operator/config/prod/pg-sni-proxy-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: bex-pg-sni-proxy-public
  namespace: bex-system
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.bex.co/component: pg-sni-proxy
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 31056
      protocol: TCP
